# iris-mcp

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROGRESS.md  README.md  SECURITY.md  apps.yaml  bench.bat  manifest.json  pyproject.toml  requirements.txt  run.bat  server.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: accuracy-regression.yml  bug.yml  feature.yml
.github/workflows/: ci.yml
assets/: README.md  bench-output.txt  doctor-output.txt
docs/: PUBLISH.md
docs/plans/: 2026-04-27-iris-v2-implementation.md
docs/specs/: 2026-04-27-iris-v2-design.md
examples/: 01_hello_iris.py  02_clipboard_pipeline.py  03_open_url_in_chrome.py  04_find_and_click_real_app.py  README.md
iris/: __init__.py  __main__.py  cli.py  doctor.py  fingerprint.py  geometry.py  input.py  launcher.py  panels.py  recipes.py  resolver.py  self_test.py  semantic.py  spatial.py  system.py  tesseract_bootstrap.py  tokens.py  verify.py  vision.py
iris/bench/: README.md  __init__.py  harness.py  runner.py  scenarios.py
recipes/: alt_tab_to.yaml  chrome.open_url.yaml  obs.start_recording.yaml  obs.stop_recording.yaml  vscode.command_palette.yaml
tests/: conftest.py  smoke_coord_alignment.py  smoke_live_bounds.py  smoke_printwindow_and_raise.py  smoke_recipes.py  smoke_sendinput.py
tests/fixtures/: iris_test_harness.py
tests/integration/: test_resolver_harness.py  test_spatial_real.py  test_tokens_revalidate.py  test_vision_capture.py  test_vision_ocr.py
tests/unit/: test_fingerprint.py  test_geometry.py  test_input_sendinput.py  test_panels.py  test_recipes.py  test_resolver_concept_boost.py  test_resolver_state_flags.py  test_semantic.py  test_semantic_widget_resolution.py  test_spatial_current_bounds.py  test_spatial_match.py  test_spatial_monitors.py  test_spatial_wait_for_visible.py  test_system.py  test_tesseract_bootstrap.py  test_tokens.py  test_tokens_inspect_off_screen.py  test_vision_cache.py  test_vision_find_text.py  test_wait_for_drift.py
